[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenSTBench"
version = "1.2.2"  
description = "Unified multidimensional evaluation toolkit for S2TT and S2ST systems in offline and streaming speech translation settings"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}
authors = [
    {name = "Yanjie An", email = "691476922@qq.com"}
]

keywords = [
    "translation", "evaluation", "BLEU", "COMET", "BLEURT",
    "speech-translation", "S2TT", "S2ST", "streaming", "latency",
    "temporal-consistency", "UTMOS", "WER", "speaker-preservation",
    "emotion", "paralinguistics", "CLAP", "audio-events"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "setuptools==80.9.0",
    "torch>=2.6,<2.7",
    "torchaudio>=2.6,<2.7",
    "numpy",
    "sacrebleu>=2.0.0",
    "pandas",
    "tqdm",
    "scipy",
    "soundfile",
    "jiwer",
    "textgrid",
    "transformers",    
    "matplotlib",
    "resemblyzer"
]

[project.urls]
Homepage = "https://github.com/sjtuayj/OpenSTBench"
Repository = "https://github.com/sjtuayj/OpenSTBench"
Documentation = "https://github.com/sjtuayj/OpenSTBench#readme"
"Bug Tracker" = "https://github.com/sjtuayj/OpenSTBench/issues"

[project.optional-dependencies]
comet = ["unbabel-comet>=2.2.2"]
whisper = ["openai-whisper"]
speech_quality = ["jiwer", "opencc-python-reimplemented"]
emotion = ["funasr", "modelscope"]  
paralinguistics = ["transformers"]
all = ["unbabel-comet>=2.2.2", "openai-whisper", "jiwer", "opencc-python-reimplemented", "funasr", "modelscope", "transformers"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["openstbench*"]
